# provider-server/provider/vm/multipass_adapter.py
@@ -203,7 +203,10 @@ class MultipassAdapter(VMProvider):
         multipass_name = config.multipass_name or f"golem-{uuid.uuid4()}"
         self._creating_multipass_names.add(multipass_name)
         mapped_name = await self.name_mapper.get_multipass_name(config.name)
-        if mapped_name != multipass_name:
+        mapped_requestor_name = await self.name_mapper.get_requestor_name(
+            multipass_name
+        )
+        if mapped_name != multipass_name or mapped_requestor_name != config.name:
             await self.name_mapper.add_mapping(config.name, multipass_name)
 
         launch_image = self._launch_image(config.image)
